# ShortMessage

./: CMakeLists.txt  build.sh  sql.sql
conf/: conf.cfg  log4cplus.properties
src/: LogicInterfaceHandler.cpp  LogicInterfaceHandler.h  controller.cpp  controller.h  main.cpp
src/commons/: fifo_queue.h  tcp_socket.cpp  tcp_socket.h  udp_socket.h  utils.cpp  utils.h
src/logic/: coder.cpp  coder.h  coder.hpp  manager.h  message_manager.cpp  message_manager.h  mobile_manager.cpp  mobile_manager.h  protocol.h  user_manager.cpp  user_manager.h
src/proto/: im.proto.old
src/thrift/: LogicInterface.cpp  LogicInterface.h  LogicInterface_server.skeleton.cpp  im.thrfit  im_types.cpp  im_types.h
src/tools/: database.cpp  database.h  logger.cpp  logger.h  priority_queue.cpp  priority_queue.h  protocol.h  qos_send_daemon.cpp  qos_send_daemon.h  send_helper.cpp  send_helper.h
src/workmanager/: LogicInterfaceHandler.cpp  LogicInterfaceHandler.h  controller.cpp  controller.h  send_helper.cpp  send_helper.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  tags
test/LogicClient/: CMakeLists.txt
test/LogicClient/src/: im.pb.cpp  im.pb.h  im_types.cpp  im_types.h  main.cpp
test/LogicClient/src/logic/: coder.cpp  coder.h
test/LogicClient/src/thrift/: im_constants.cpp  im_constants.h  im_types.h
test/LogicServer/: CMakeLists.txt
test/LogicServer/src/: LogicInterfaceHandler.cpp  LogicInterfaceHandler.h  main.cpp
test/LogicServer/src/logic/: protocol.h
test/LogicServer/src/proto/: im.proto
test/LogicServer/src/thrift/: LogicInterface.h  im.thrfit  im_types.cpp
test/src/: main.cpp
test/src/commons/: comm_socket.cpp  epoll_wrapper.h  fifo_queue.cpp  tcp_socket.h  udp_socket.cpp
