cmake_minimum_required (VERSION 2.6)
project (ShortMessage)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

set(CMAKE_CXX_FLAGS "-pipe -g -std=c++0x -W -Wall -Wno-unused-parameter -Wno-deprecated-declarations -Wno-reorder -fPIC")
set(CMAKE_CXX_FLAGS_DEBUG "-O0")
#set(CMAKE_CXX_FLAGS_RELEASE "-O2")
set(CMAKE_BUILD_TYPE "RelWithDebInfo")
set(CMAKE_BUILD_TYPE "Debug")
ADD_DEFINITIONS(-DLINUX -DPTHREAD)
message(INFO "CMAKE BUILD TYPE:" ${CMAKE_BUILD_TYPE})
set(PROJECT_DIR  ${CMAKE_CURRENT_SOURCE_DIR})


file(GLOB_RECURSE COMMONS_SOURCES "src/commons/*.cpp")
file(GLOB_RECURSE PROTO_SOURCES "src/proto/*.cpp")
file(GLOB_RECURSE TOOLS_SOURCES "src/tools/*.cpp")
file(GLOB_RECURSE LOGIC_SOURCES "src/logic/*.cpp")
file(GLOB_RECURSE WORKMANAGER_SOURCES "src/workmanager/*.cpp")
file(GLOB_RECURSE MAIN_SOURCES "src/*.cpp")


set(SERVICE_SOURCES ${COMMONS_SOURCES} ${PROTO_SOURCES} ${TOOLS_SOURCES} ${LOGIC_SOURCES} ${WORKMANAGER_SOURCES} ${MAIN_SOURCES})
set(SERVICE_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/src")



set(LIBCONFIG_MODULE "${PROJECT_DIR}/lib/libconfig")
set(LIBCONFIG_MODULE_INCLUE ${LIBCONFIG_MODULE}/include)
file(GLOB_RECURSE LIBCONFIG_MODULE_LIB "${LIBCONFIG_MODULE}/lib/libconfig++.a")

set(LIBZDB_MODULE "${PROJECT_DIR}/lib/libzdb")
set(LIBZDB_MODULE_INCLUDE "${LIBZDB_MODULE}/include/zdb")
file(GLOB_RECURSE LIBZDB_MODULE_LIB "${LIBZDB_MODULE}/lib/libzdb.a")

set(LIBMYSQL_MODULE "${PROJECT_DIR}/lib/libmysql")
set(LIBMYSQL_MODULE_INCLUDE "${LIBMYSQL_MODULE}/include")
file(GLOB_RECURSE LIBMYSQL_MODULE_LIB "${LIBMYSQL_MODULE}/lib/libmysqlclient.a")

set(LIBLOG4CPLUS_MODULE "${PROJECT_DIR}/lib/liblog4cplus")
set(LIBLOG4CPLUS_MODULE_INCLUDE "${LIBLOG4CPLUS_MODULE}/include")
file(GLOB_RECURSE LIBLOG4CPLUS_MODULE_LIB "${LIBLOG4CPLUS_MODULE}/lib/liblog4cplus.a")

set(LIBPROTOBUF_MODULE "${PROJECT_DIR}/lib/libprotobuf")
set(LIBPROTOBUF_MODULE_INCLUDE "${LIBPROTOBUF_MODULE}/include")
file(GLOB_RECURSE LIBPROTOBUF_MODULE_LIB "${LIBPROTOBUF_MODULE}/lib/libprotobuf.a")

set(LIBTHRIFT_MODULE "${PROJECT_DIR}/lib/libthrift")
set(LIBTHRIFT_MODULE_INCLUDE "${LIBTHRIFT_MODULE}/include")
file(GLOB_RECURSE LIBTHRIFT_MODULE_LIB "${LIBTHRIFT_MODULE}/lib/libthrift.a")
file(GLOB_RECURSE LIBTHRIFT_NB_MODULE_LIB "${LIBTHRIFT_MODULE}/lib/libthriftnb.a")

set(LIBEVENT_MODULE "${PROJECT_DIR}/lib/libevent")
set(LIBEVENT_MODULE_INCLUDE "${LIBEVENT_MODULE}/include")
file(GLOB_RECURSE LIBEVENT_MODULE_LIB "${LIBEVENT_MODULE}/lib/libevent.a")

set(LIBBOOST_MODULE "${PROJECT_DIR}/lib/libboost")
set(LIBBOOST_MODULE_INCLUDE ${LIBBOOST_MODULE}/include)
file(GLOB_RECURSE LIBBOOST_MODULE_LIB "${LIBBOOST_MODULE}/lib/*.a")

set(LIBTBB_MODULE "${PROJECT_DIR}/lib/libtbb")
set(LIBTBB_MODULE_INCLUDE ${LIBTBB_MODULE}/include)
file(GLOB_RECURSE LIBTBB_MODULE_LIB ${LIBTBB_MODULE}/lib/*.so.2)

include_directories(
    src/
    ${SERVICE_INCLUDE}
    ${LIBCONFIG_MODULE_INCLUE}
    ${LIBZDB_MODULE_INCLUDE}
    ${LIBMYSQL_MODULE_INCLUDE}
    ${LIBLOG4CPLUS_MODULE_INCLUDE}
    ${LIBPROTOBUF_MODULE_INCLUDE}
    ${LIBEVENT_MODULE_INCLUDE}
    ${LIBTHRIFT_MODULE_INCLUDE}
    ${LIBBOOST_MODULE_INCLUDE}
    ${LIBTBB_MODULE_INCLUDE}
    )

add_executable(server ${SERVICE_SOURCES})

target_link_libraries(server
    ${LIBCONFIG_MODULE_LIB}
    ${LIBZDB_MODULE_LIB}
    ${LIBMYSQL_MODULE_LIB}
    ${LIBLOG4CPLUS_MODULE_LIB}
    ${LIBPROTOBUF_MODULE_LIB}
    ${LIBTHRIFT_MODULE_LIB}
    ${LIBTHRIFT_NB_MODULE_LIB}
    ${LIBBOOST_MODULE_LIB}
    ${LIBEVENT_MODULE_LIB}
    ${LIBTBB_MODULE_LIB}
    pthread
    rt
    dl
    sqlite3
    )
